--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,10 @@ dependencies {
 
     implementation 'com.itextpdf:itextpdf:5.5.13.2'
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
